--- a/pages/home.html
+++ b/pages/home.html
@@ -7,10 +7,18 @@
 
     <style>
 
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body{
             background-color: #1a1a1a;
-            
         }
+
+        
+
     </style>
 </head>
 <body>
