--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -29,6 +29,7 @@
     .welcome_image{
         display: flex;
         justify-content: center;
+        margin-top: 1%;
     }
 
     .welcome_image img{
