--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -90,7 +90,7 @@
 
     <div class="welcome_texto2">
         <div>
-            <h1>Seu nome aplicativo</h1><br><br>
+            <h1>Seu novo aplicativo</h1><br><br>
             <h2>Preencha ocorrências, tenha acesso a<br>históricos e estatísticas </h2>
         </div>
     </div>
