--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -71,6 +71,12 @@
         border-color: #007aff;
         border-width: 3px;
     }
+
+    .botao_welcome:hover{
+        background-color: #007aff;
+        color: white;
+    }
+
 </style>
 
 <body>
@@ -97,11 +103,11 @@
 
     <div class="welcome_botoes">
         <div>
-            <button><b>Entrar</b></button>
+            <button class="botao_welcome"><b>Entrar</b></button>
         </div>
 
         <div>
-            <button><b>Cadastre-se</b></button>
+            <button class="botao_welcome"><b>Cadastre-se</b></button>
         </div>
     </div>
 
