--- a/pages/login.html
+++ b/pages/login.html
@@ -77,7 +77,7 @@
             height: 18vh;
             /* margin-top: 3%; */
             justify-content: space-between;
-            /* align-items: center; */
+            align-items: center;
             background-color: rgba(31, 209, 209, 0);
         }
         input {
@@ -89,14 +89,15 @@
             background-color: #1A1A1A;
             border: 1px solid #1A1A1A;
         }
-        form i {
+        /* Visuslizção senha */
+        /* form i {
             font-size: 19px;
             cursor: pointer;
             position: absolute;
             left: 640px;
             color: rgb(255, 255, 255);
             margin-top: 99px;
-        }
+        }  */
         /* Espaço para o botão de entrada */
         .botao {
             display: flex;
@@ -181,7 +182,7 @@
                 <div class="espaco_dados">
                     <input id="matricula" type="text" name="" placeholder="Matricula">
                     <input id="senha" type="password" name="" placeholder="Senha" maxlength="25">
-                    <i class="bi bi-eye-slash" id="togglePassword"></i>
+                    <!-- <i class="bi bi-eye-slash" id="togglePassword"></i> -->
                 </div>
             </form>
             <div class="botao">
@@ -196,24 +197,24 @@
         </div>
     </div>
     <script>
-        const togglePassword = document
-            .querySelector('#togglePassword');
+        // const togglePassword = document
+        //     .querySelector('#togglePassword');
 
-        const password = document.querySelector('#password');
+        // const password = document.querySelector('#password');
 
-        togglePassword.addEventListener('click', () => {
+        // togglePassword.addEventListener('click', () => {
 
-            // Toggle the type attribute using
-            // getAttribure() method
-            const type = password
-                .getAttribute('type') === 'password' ?
-                'text' : 'password';
+        //     // Toggle the type attribute using
+        //     // getAttribure() method
+        //     const type = password
+        //         .getAttribute('type') === 'password' ?
+        //         'text' : 'password';
 
-            password.setAttribute('type', type);
+        //     password.setAttribute('type', type);
 
-            // Toggle the eye and bi-eye icon
-            this.classList.toggle('bi-eye');
-        });
+        //     // Toggle the eye and bi-eye icon
+        //     this.classList.toggle('bi-eye');
+        // });
     </script>
 
 </body>
