--- a/pages/loading.html
+++ b/pages/loading.html
@@ -25,44 +25,94 @@
             padding: 0;
             background-color: #1A1A1A;
         }
-        .esp_imgs{
-            display: flex;
-            width: 100vw;
-            height: 100vh;
-            justify-content: space-between;
-            /* background-color: rgba(127, 255, 212, 0.87); */
+
+        header {
+            height: 30vh;
+            width: 100%;
         }
-        .img_01{
-            width: 50%;
-            height: 100%;
+
+        section {
             display: flex;
             justify-content: center;
         }
-        .img_02{
-            width: 50%;
-            height: 100%;
+
+        section,
+        footer {
+            height: 33vh;
+            width: 100%;
+        }
+
+        .logos {
+            height: 110%;
             width: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
+        }
+
+        footer {
+            display: flex;
             justify-content: center;
-            /* background-color: rgba(255, 0, 221, 0.479); */
+        }
+
+        .dot {
+            width: 10px;
+            height: 10px;
+            margin: 0 5px;
+            border-radius: 50%;
+            background-color: white;
+            animation: bounce 1s ease-in-out infinite;
+            margin-top: 60px;
+        }
+
+        .dot:nth-child(1) {
+            animation-delay: 0.75s;
+        }
+
+        .dot:nth-child(2) {
+            animation-delay: 0.5s;
+        }
+
+        @keyframes bounce {
+
+            0%,
+            100% {
+                transform: translateY(0);
+            }
+
+            50% {
+                transform: translateY(-10px);
+            }
+        }
+
+        .logo1,.logo2 {
+            height: 85%;
+        }
+
+        .logo2 {
+            margin-left: -28%;
         }
     </style>
 </head>
 
 <body>
-    <div class="esp_imgs">
-        <div class="img_01">
-            <img src="/images/logo-bombeiros1.png" alt="">
+    <header></header>
+    <section>
+        <div class="logos">
+            <img class="logo1" src="../images/logo_noar.png">
+            <img class="logo2" src="../images/logo-bombeiros1.png">
         </div>
     </section>
-
     <footer>
         <div class="dot"></div>
         <div class="dot"></div>
         <div class="dot"></div>
     </footer>
+    <script>
+
+
+
+    </script>
 </body>
 
 </html>
