--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -2,15 +2,23 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@300&display=swap"
-        rel="stylesheet">
-    <link rel="icon" href="../images/avatar_bombeiro.png" type="image/png">
+    <meta charset=UTF-8>
+    <!-- Linkagem -->
     <title>Seja Bem Vindo</title>
+    <!-- Titulo -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@300&display=swap">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- Fonte -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
+    <!-- media -->
+    <link rel="icon" href="../img/avatar_bombeiro.png" type="image/png">
+    <!--Imagem icon-->
 </head>
 
 <style>
@@ -18,33 +26,41 @@
         margin: 0;
         padding: 0;
         background-color: #1A1A1A;
-        display: flex;
     }
+    .base_welcome{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        height: 100vh;
+        width: 100vw;
+        /* margin-top: 18%; */
+    }
+
     .welcome_texto1 {
         display: flex;
         justify-content: center;
         font-family: 'Inter', sans-serif;
         color: white;
-        margin-top: 7%;
         font-size: 20px;
     }
     .welcome_image {
         display: flex;
-        justify-content: center;
         margin-top: 4%;
-    }
+    } 
     .welcome_image img {
         border-radius: 50%;
     }
     .welcome_texto2 {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         text-align: center;
         font-family: 'Inter', sans-serif;
         color: white;
         margin-top: 6%;
-        font-size: 12px;
-    }
+        /* font-size: 1vw; */
+    } 
     .welcome_botoes {
         display: flex;
         justify-content: center;
@@ -52,8 +68,8 @@
         gap: 100px;
     }
     .welcome_botoes button {
-        width: 210px;
-        height: 65px;
+        width: 38vw;
+        height: 8vh;
         color: #007aff;
         font-family: 'Inter', sans-serif;
         font-size: 15px;
@@ -65,42 +81,32 @@
     .botao_welcome:hover{
         background-color: #007aff;
         color: white;
-    }
-    /* @media screen and (max-width:770px) {
-            .Responsivo{
-                /* justify-content: center;
-                align-items: center; */
-            }
-        } 
-    Responsivo
+    } 
 </style>
 
 <body>
-    <div class="Responsivo">
+    <div class="base_welcome">
         <div class="welcome_texto1">
             <div>
-                <h1><b>Seja Bem Vindo</b></h1>
+                <h1 class="fw-bold">Seja Bem Vindo</b></h1>
             </div>
         </div>
         <div class="welcome_image">
             <div>
-                <img src="../images/avatar_bombeiro.png" width="200px">
+                <img src="../img/avatar_bombeiro.png" width="200px">
             </div>
         </div>
         <div class="welcome_texto2">
-            <div>
-                <h1>Seu novo aplicativo</h1><br><br>
-                <h2>Preencha ocorrências, tenha acesso a<br>históricos e estatísticas </h2>
-            </div>
+            <h1 class="fw-semibold">Seu novo aplicativo</h1><br><br>
+            <h2 class="fw-semibold">Preencha ocorrências, tenha acesso a<br>históricos e estatísticas </h2>
         </div>
         <div class="welcome_botoes">
             <div>
-                <button class="botao_welcome"><b>Entrar</b></button>
-            </div>
-            <div>
-                <button class="botao_welcome"><b>Cadastre-se</b></button>
+                <button class="botao_welcome" type="button">Log in</button>
             </div>
         </div>
-    </div>    
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
