--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset=UTF-8>
@@ -17,8 +17,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width">
     <!-- media -->
-    <link rel="icon" href="../img/avatar_bombeiro.png" type="image/png">
+    <link rel="icon" href="../images/avatar_bombeiro.png" type="image/png">
     <!--Imagem icon-->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 
 <style>
@@ -93,7 +95,7 @@
         </div>
         <div class="welcome_image">
             <div>
-                <img src="../img/avatar_bombeiro.png" width="200px">
+                <img src="../images/avatar_bombeiro.png" width="200px">
             </div>
         </div>
         <div class="welcome_texto2">
@@ -107,6 +109,6 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    
 </body>
 </html>
