--- a/pages/gestacional2.html
+++ b/pages/gestacional2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="Pt-BR">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -31,11 +31,41 @@
             color: white;
         }
 
-        #nav{
+        #nav {
             background-color: #333333;
         }
+
+        .responsive1 {
+            margin-top: 100px;
+        }
+
+        .quadrado1 {
+            background-color: #333333;
+            margin: auto;
+            width: 900px;
+            height: 70px;
+            border-radius: 15px;
+            margin-top: 14px;
+        }
+
+        .linha-de-texto {
+            background-color: #333333;
+            width: 99%;
+            color: white;
+            border: none;
+            border-bottom: 2px solid rgb(6, 108, 243);
+            outline: none;
+        }
+
+        .textos {
+            font-family: 'Inter', sans-serif;
+        }
+
+        .divtextos {
+            margin-left: 8px;
+        }
     </style>
-</head>  
+</head>
 <body>
     <nav class="navbar navbar-dark fixed-top" id="nav">
         <div class="container-fluid">
@@ -70,6 +100,33 @@
             </div>
         </div>
     </nav>
+
+    <div class="responsive1">
+
+        <div class="quadrado1">
+            <div class="divtextos">
+                <h2 style="font-size: 15px;" class="textos">PERÍODO DA GESTAÇÃO</h2>
+                <input type="text" class="linha-de-texto" placeholder="">
+            </div>
+        </div>
+
+        <div class="quadrado1">
+            <div class="divtextos">
+                <h2 style="font-size: 15px;" class="textos">FEZ PRÉ-NATAL?</h2>
+            </div>
+        </div>
+
+        <div class="quadrado1"></div>
+        <div class="quadrado1"></div>
+        <div class="quadrado1"></div>
+        <div class="quadrado1"></div>
+        <div class="quadrado1"></div>
+        <div class="quadrado1"></div>
+        <div class="quadrado1"></div>
+        <div class="quadrado1"></div>
+        <div class="quadrado1"></div>
+    </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
