--- a/pages/gestacional2.html
+++ b/pages/gestacional2.html
@@ -52,26 +52,104 @@
             background-color: #333333;
             width: 99%;
             color: white;
+            margin-top: -10px;
             border: none;
             border-bottom: 2px solid rgb(6, 108, 243);
             outline: none;
         }
 
-        .textos {
+        .textos1 {
             font-family: 'Inter', sans-serif;
+            margin-bottom: 0;
+        }
+
+        .textos {
+            padding-top: 26px;
+            margin-left: 6px;
+            margin-bottom: 0;
         }
 
         .divtextos {
             margin-left: 8px;
         }
+
+        .checkbox-container {
+            display: flex;
+            position: relative;
+            margin-left: 2;
+            padding-left: 30px;
+            margin-left: 150px;
+            margin-top: -20px;
+            /* Espaço para o checkbox personalizado */
+            margin-bottom: 10px;
+            cursor: pointer;
+
+        }
+
+        .checkbox-container input {
+            position: absolute;
+            opacity: 0;
+            cursor: pointer;
+
+        }
+
+        .checkmark {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 20px;
+            width: 20px;
+            background-color: transparent;
+            border: 2px solid #ffffff;
+            border-radius: 3px;
+        }
+
+        .checkbox-container:hover .checkmark {
+            background-color: #ddd;
+        }
+
+        .checkbox-container input:checked+.checkmark {
+            background-color: #ffffff;
+            border: none;
+        }
+
+        .checkmark:after {
+            content: "";
+            position: absolute;
+            display: none;
+        }
+
+        .checkbox-container input:checked+.checkmark:after {
+            display: block;
+        }
+
+        .checkbox-container .checkmark:after {
+            left: 6px;
+            top: 2px;
+            width: 5px;
+            height: 10px;
+            border: solid rgb(0, 0, 0);
+            border-width: 0 2px 2px 0;
+            transform: rotate(45deg);
+        }
+
+        .checkboxpre {
+            display: flex;
+            font-family: 'Inter', sans-serif;
+        }
+
+        .checkboxpre2{
+            margin-left: -120px;
+        }
     </style>
 </head>
+
 <body>
     <nav class="navbar navbar-dark fixed-top" id="nav">
         <div class="container-fluid">
             <img src="../images/avatar_bombeiro.png" width="60px">
             <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" 
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -105,15 +183,35 @@
 
         <div class="quadrado1">
             <div class="divtextos">
-                <h2 style="font-size: 15px;" class="textos">PERÍODO DA GESTAÇÃO</h2>
+                <h2 style="font-size: 15px; padding: 6px;" class="textos1">PERÍODO DA GESTAÇÃO</h2>
                 <input type="text" class="linha-de-texto" placeholder="">
             </div>
         </div>
 
         <div class="quadrado1">
+
             <div class="divtextos">
                 <h2 style="font-size: 15px;" class="textos">FEZ PRÉ-NATAL?</h2>
             </div>
+
+        <div class="checkboxpre">
+            <div>
+                <label class="checkbox-container">
+                    <input type="checkbox">
+                    <span class="checkmark"></span>
+                    <h6>SIM</h6>
+                </label>
+            </div>
+
+            <div class="checkboxpre2">
+                <label class="checkbox-container">
+                    <input type="checkbox">
+                    <span class="checkmark"></span>
+                    <h6>NÃO</h6>
+                </label>
+            </div>
+        </div>
+
         </div>
 
         <div class="quadrado1"></div>
