--- a/pages/anamnese médica.html
+++ b/pages/anamnese médica.html
@@ -23,81 +23,83 @@
         }
 
         body {
-            background-color: #1a1a1a;
+            background-color: #c1c1c1;
             height: 100vh;
             font-family: 'Inter', sans-serif;
             color: white;
         }
 
-        .menu8 {
+        #nav {
             background-color: #333333;
+        }
+
+        #content{
+            height: 100%;
             width: 100%;
-            height: 10%;
-            display: flex;
         }
 
-        .menu8 .menu-display-1 {
-            width: 50%;
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
+        .card{
+            background-color: #333333;
+            height: 100px;
         }
 
-        .menu8 .noar {
-            margin-top: 5px;
-        }
-
-        .menu8 .menu-container {
-            width: 50%;
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-        }
-
-        .menu8 .bombeiro img {
-            border-radius: 50%;
-        }
-
-        .bombeiro {
-            margin-right: 10px;
-        }
-
-        .noar {
-            margin-left: 10px;
-        }
-
-        .menu-btn {
-            display: flex;
-            flex-direction: column;
-            cursor: pointer;
-            padding: 10px;
-            margin-right: 5px;
-        }
-
-        .bar {
-            width: 30px;
-            height: 3px;
-            background-color: #ffffff;
-            margin: 3px 0;
-        }
-
+    
     </style>
 </head>
 
 <body>
-    <div class="menu8">
-        <div class="menu-display-1">
-            <div class="noar">
-                <img src="../images/avatar_bombeiro.png" width="65px">
+    <nav class="navbar navbar-dark" id="nav">
+        <div class="container-fluid">
+            <img src="../images/avatar_bombeiro.png" width="60px">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" 
+                data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                aria-labelledby="offcanvasDarkNavbarLabel">
+                <div class="offcanvas-header">
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">CATEGORIAS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">PERFIL</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">SAIR</a>
+                        </li>
+                </div>
             </div>
         </div>
+    </nav>
 
-        <div class="menu-container">
-            <div class="menu-btn">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-            </div>
+    <!-- <div class="container-fluid d-flex justify-content-center" id="content">
+        <div class="container-fluid card col-9"></div>
+        <div class="container-fluid card col-9"></div>
+        <div class="container-fluid card col-9"></div>
+        <div class="container-fluid card col-9"></div>
+        <div class="container-fluid card col-9"></div>
+        <div class="container-fluid card col-9"></div>
+        <div class="container-fluid card col-9"></div>
+    </div> -->
+    <div class="container-fluid">
+        <div class="row align-self-center">
+        <div class="card col-12"></div>
+        <div class="card col-12"></div>
+        <div class="card col-12"></div>
+        <div class="card col-12"></div>
+        <div class="card col-12"></div>
+        <div class="card col-12">
+
         </div>
     </div>
 
