--- a/pages/situation.html
+++ b/pages/situation.html
@@ -167,6 +167,18 @@
         border-width: 0 2px 2px 0;
         transform: rotate(45deg);
     }
+    @media screen and (max-width:770px) {
+
+        .situacao_texto1 {
+        color: white;
+        display: flex;
+        justify-content: center;
+        font-family: 'Inter', sans-serif;
+        font-size: 18px;
+        margin-top: 43%;
+    }
+
+    }    
 </style>
 
 <body>
