--- a/pages/anamnese médica.html
+++ b/pages/anamnese médica.html
@@ -102,10 +102,10 @@
                     <input type="text" class="text-line">
                 </div>
 
-                <div class="card col-9 mt-4">
-                    <div class="container d-flex gap-4 align-items-center">
+                <div class="card col-9 mt-4 d-flex flex-column justify-content-center">
+                    <div class="container d-flex gap-4">
 
-                        <label class="card-text mt-3">ACONTECEU OUTRAS VEZES?</label>
+                        <label class="card-text mb-0">ACONTECEU OUTRAS VEZES?</label>
 
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
