--- a/pages/anamnese médica.html
+++ b/pages/anamnese médica.html
@@ -103,7 +103,7 @@
                 </div>
 
                 <div class="card col-9 mt-4 d-flex flex-column justify-content-center">
-                    <div class="container d-flex gap-4">
+                    <div class="container d-flex gap-4 p-0">
 
                         <label class="card-text mb-0">ACONTECEU OUTRAS VEZES?</label>
 
@@ -127,7 +127,28 @@
                     <label class="card-text mt-3">A QUANTO TEMPO ISTO ACONTECEU?</label>
                     <input type="text" class="text-line">
                 </div>
-                <div class="card col-9 mt-4"></div>
+
+                <div class="card col-9 mt-4">
+                    <div class="container d-flex gap-4 p-0">
+
+                        <label class="card-text mb-0">POSSUI ALGUM PROBLEMA DE SAÚDE?</label>
+
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                            <label class="form-check-label card-text" for="flexRadioDefault1">
+                                SIM
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2"
+                                checked>
+                            <label class="form-check-label card-text" for="flexRadioDefault2">
+                                NÃO
+                            </label>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="card col-9 mt-4"></div>
                 <div class="card col-9 mt-4"></div>
                 <div class="card col-9 mt-4"></div>
