--- a/pages/ocorrencia.html
+++ b/pages/ocorrencia.html
@@ -99,7 +99,7 @@
             </div>
         </div>
     </nav>
-    <!-- <div class="container">
+    <!-- <div class="container">oi
         <div class="row">
             <div class="col-6">
                 <div class="container card"></div>
