--- a/pages/ocorrencia.html
+++ b/pages/ocorrencia.html
@@ -111,29 +111,37 @@
     </div> -->
     <div class="casa mt-4">
             <div class="column">
-                <div class="block"><div>CAUSADO POR ANIMAIS</div></div>
-                <div class="block px-3"><div>COM MEIO DE TRANSPORTE</div></div>
-                <div class="block"><div>DESMORONAMENTO/DESLIZAMENTO</div></div>
-                <div class="block"><div>EMERGÊNCIA MÉDICA</div></div>
-                <div class="block"><div>QUEDA DE ALTURA 2M</div></div>
-                <div class="block"><div>TENTATIVA DE SUICÍDIO</div></div>
-                <div class="block"><div>QUEDA PRÓPRIA ALTURA</div></div>
-                <div class="block"><div>AFOGAMENTO</div></div>
-                <div class="block"><div>AGRESSÃO</div></div>
-                <div class="block"><div>ATROPELAMENTO</div></div>    
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="gap: 134px; width: 100%;">CAUSADO POR ANIMAIS 
+                        <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div>COM MEIO DE TRANSPORTE</div>
+                </div>
+                <div class="block px-3"><div>DESMORONAMENTO/DESLIZAMENTO</div></div>
+                <div class="block px-3"><div>EMERGÊNCIA MÉDICA</div></div>
+                <div class="block px-3"><div>QUEDA DE ALTURA 2M</div></div>
+                <div class="block px-3"><div>TENTATIVA DE SUICÍDIO</div></div>
+                <div class="block px-3"><div>QUEDA PRÓPRIA ALTURA</div></div>
+                <div class="block px-3"><div>AFOGAMENTO</div></div>
+                <div class="block px-3"><div>AGRESSÃO</div></div>
+                <div class="block px-3"><div>ATROPELAMENTO</div></div>    
                
             </div>
             <div class="column">
-                <div class="block"><div>CHOQUE ELÉTRICO</div></div>
-                <div class="block"><div>DESABAMENTO</div></div>
-                <div class="block"><div>DOMÉSTICO</div></div>
-                <div class="block"><div>ESPORTIVO</div></div>
-                <div class="block"><div>INTOXICAÇÃO</div></div>
-                <div class="block"><div>QUEDA BICICLETA</div></div>
-                <div class="block"><div>QUEDA MOTO</div></div>
-                <div class="block"><div>QUEDA NÍVEL<2M</div></div>
-                <div class="block"><div>TRABALHO</div></div>
-                <div class="block"><div>TRANSFERÊNCIA</div></div>
+                <div class="block px-3"><div>CHOQUE ELÉTRICO</div></div>
+                <div class="block px-3"><div>DESABAMENTO</div></div>
+                <div class="block px-3"><div>DOMÉSTICO</div></div>
+                <div class="block px-3"><div>ESPORTIVO</div></div>
+                <div class="block px-3"><div>INTOXICAÇÃO</div></div>
+                <div class="block px-3"><div>QUEDA BICICLETA</div></div>
+                <div class="block px-3"><div>QUEDA MOTO</div></div>
+                <div class="block px-3"><div>QUEDA NÍVEL<2M</div></div>
+                <div class="block px-3"><div>TRABALHO</div></div>
+                <div class="block px-3"><div>TRANSFERÊNCIA</div></div>
                 
             </div>
   </div>
