--- a/pages/login.html
+++ b/pages/login.html
@@ -42,12 +42,11 @@
         }
 
         .espaco_log {
-            width: 46vw;
-            height: 56vh;
+            width: 50vw;
+            height: 50vh;
             background-color: #333333;
             border-radius: 4%;
             box-shadow: 0px 0px 15px #1E90FF;
-            ;
             flex-direction: column;
         }
 
@@ -161,7 +160,7 @@
 
             .espaco_log {
                 width: 74vw;
-                height: 52vh;
+                height: 46vh;
             }
 
             .espaco_dados {
@@ -197,7 +196,7 @@
             </div>
             <form class="formi" action="" method="post">
                 <div class="espaco_dados">
-                    <input id="matricula" type="text" name="" placeholder="Matricula">
+                    <input id="matricula" type="text" name="" placeholder="Nome">
                     <input id="senha" type="password" name="" placeholder="Senha" maxlength="25">
                     <!-- <i class="bi bi-eye-slash" id="togglePassword"></i> -->
                 </div>
@@ -205,12 +204,12 @@
             <div class="botao">
                 <button class="btn-conec" type="submit">Log in</button>
             </div>
-            <div class="registro1">
+            <!-- <div class="registro1">
                 <div class="small_letters_registro">
                     <div>Esqueceu sua senha?</div>
                     <div>Não tem cadastro? <a class="link" href="">Cadastre-se</a></div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <script>
