--- a/pages/home.html
+++ b/pages/home.html
@@ -1,341 +1,323 @@
-<meta charset=UTF-8>
-<!-- Linkagem -->
-<title>Home</title>
-<!-- Titulo -->
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@300&display=swap">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<!-- Fonte -->
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="viewport" content="width=device-width">
-<!-- media -->
-<link rel="icon" href="../images/avatar_bombeiro.png" type="image/png">
-<!--Imagem icon-->
+<!DOCTYPE html>
+<html lang="pt-br">
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+<head>
+    <meta charset=UTF-8>
+    <!-- Linkagem -->
+    <title>Home</title>
+    <!-- Titulo -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@300&display=swap">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- Fonte -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
+    <!-- media -->
+    <link rel="icon" href="../images/avatar_bombeiro.png" type="image/png">
+    <!--Imagem icon-->
 
-<style>
-    body {
-        margin: 0;
-        padding: 0;
-        background-color: #C1C1C1;
-        color: white;
-        font-family: 'Inter', sans-serif;
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
-    }
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: #C1C1C1;
+            color: white;
+            font-family: 'Inter', sans-serif;
 
-    /* Detalhes nav */
-    #nav {
-        background-color: #333333;
-    }
+        }
 
-    .container {
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        margin-top: 10%;
-    }
+        /* Detalhes nav */
+        #nav {
+            background-color: #333333;
+        }
 
+        .container {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            margin-top: 10%;
+        }
 
+        /* Detalhes corpo */
 
+        .base_home {
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+            width: 100vw;
+            justify-content: space-between;
+        }
 
+        /* Texto Olá  */
 
-    .menu {
-        background-color: #333333;
-        width: 100%;
-        height: 10%;
-        display: flex;
-    }
+        .texto {
+            display: flex;
+            margin-top: 87px;
+            height: 13%;
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            background-color: rgba(128, 0, 128, 0.405);
+        }
 
-    .menu .menu-display-1 {
-        width: 50%;
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-    }
+        .texto-block {
+            display: flex;
+            width: 96%;
+            flex-direction: column;
+            background-color: #e4595276;
+        }
 
-    .menu .noar {
-        margin-top: 5px;
-    }
+        .texto .ola {
+            font-size: 24px;
+            opacity: 0.8;
+        }
 
-    .menu .menu-display-2 {
-        width: 50%;
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-    }
+        .texto .bombeiro {
+            font-size: 20px;
+            font-weight: 600;
+            margin-left: 25px;
+            margin-top: 10px;
+        }
 
-    .menu .bombeiro img {
-        border-radius: 50%;
-    }
+        /* Dados bloco central */
+        .central {
+            height: 35%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-    .bombeiro {
-        margin-right: 10px;
-    }
+        .central .redcard {
+            height: 82%;
+            width: 84%;
+            background-color: #E45952;
+            border-radius: 10px;
+            opacity: 1;
+            display: flex;
+            cursor: pointer;
+        }
 
-    .noar {
-        margin-left: 10px;
-    }
+        .card-texto,
+        .card-imagem {
+            width: 50%;
+        }
 
-    .texto {
-        height: 20%;
-        display: flex;
-        align-items: center;
-        margin-left: 50px;
-    }
+        .redcard .texto-titulo {
+            font-size: 30px;
+            font-weight: 600;
+            margin-top: 30px;
+            margin-left: 30px;
+        }
 
-    .texto .ola {
-        font-size: 24px;
-        opacity: 0.8;
-    }
+        .redcard .texto-subtitulo {
+            font-size: 24px;
+            font-weight: 600;
+            margin-top: 5px;
+            margin-left: 30px;
+        }
 
-    .texto .bombeiro {
-        font-size: 20px;
-        font-weight: 600;
-        margin-left: 25px;
-        margin-top: 10px;
-    }
-
-    .central {
-        height: 35%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .central .redcard {
-        height: 82%;
-        width: 84%;
-        background-color: #E45952;
-        border-radius: 10px;
-        opacity: 1;
-        display: flex;
-        cursor: pointer;
-    }
-
-    .card-texto,
-    .card-imagem {
-        width: 50%;
-    }
-
-    .redcard .texto-titulo {
-        font-size: 30px;
-        font-weight: 600;
-        margin-top: 30px;
-        margin-left: 30px;
-    }
-
-    .redcard .texto-subtitulo {
-        font-size: 24px;
-        font-weight: 600;
-        margin-top: 5px;
-        margin-left: 30px;
-    }
-
-    .card-imagem {
-        display: flex;
-        justify-content: flex-end;
-    }
-
-    .redcard img {
-        height: 28vh;
-    }
-
-    .redcard .card-imagem {
-        margin-top: 0.6%;
-    }
-
-    .rodape {
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        height: 35%;
-        margin-left: 20px;
-        margin-right: 20px;
-    }
-
-    .rodape .bluecard,
-    .purplecard {
-        height: 67%;
-        width: 36%;
-        border-radius: 10px;
-        display: flex;
-    }
-
-    .bluecard {
-        background-color: #35BFE2;
-    }
-
-    .purplecard {
-        background-color: #AA7AE4;
-    }
-
-    .bluecard,
-    .purplecard .texto-titulo {
-        font-size: 28px;
-        font-weight: bold;
-        text-align: center;
-    }
-
-    .bluecard .card-texto,
-    .purplecard .card-texto {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .card-imagem-special {
-        display: flex;
-        justify-content: flex-start;
-        margin-top: 7.5%;
-        margin-left: 0.1%;
-    }
-
-    .bluecard img {
-        height: 20vh;
-        border-radius: 7px;
-    }
-
-    .purplecard img {
-        height: 21vh;
-        border-radius: 7px;
-    }
-
-    .purplecard .card-imagem {
-        margin-top: 5%;
-    }
-
-    @media screen and (max-width: 770px) {
+        .card-imagem {
+            display: flex;
+            justify-content: flex-end;
+        }
 
         .redcard img {
-            height: 25vh;
+            height: 28vh;
         }
 
         .redcard .card-imagem {
-            margin-top: 5.6%;
+            margin-top: 0.6%;
         }
 
-        .bluecard img {
-            height: 16vh;
+        /* Dados rodapé */
+        .rodape {
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            height: 35%;
+            margin-left: 20px;
+            margin-right: 20px;
         }
 
-        .card-imagem-special {
-            margin-top: 29%;
-            margin-left: 0.2%;
+        .rodape .bluecard,
+        .purplecard {
+            height: 67%;
+            width: 36%;
+            border-radius: 10px;
+            display: flex;
+        }
+
+        .bluecard {
+            background-color: #35BFE2;
+        }
+
+        .purplecard {
+            background-color: #AA7AE4;
         }
 
         .bluecard,
         .purplecard .texto-titulo {
-            width: 100%;
+            font-size: 28px;
+            font-weight: bold;
+            text-align: center;
+        }
+
+        .bluecard .card-texto,
+        .purplecard .card-texto {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .card-imagem-special {
+            display: flex;
+            justify-content: flex-start;
+            margin-top: 7.5%;
+            margin-left: 0.1%;
+        }
+
+        .bluecard img {
+            height: 20vh;
+            border-radius: 7px;
         }
 
         .purplecard img {
-            height: 17vh;
+            height: 21vh;
+            border-radius: 7px;
         }
 
         .purplecard .card-imagem {
-            margin-top: 25%;
+            margin-top: 5%;
         }
 
-    }
-</style>
+        @media screen and (max-width: 770px) {
+
+            .redcard img {
+                height: 25vh;
+            }
+
+            .redcard .card-imagem {
+                margin-top: 5.6%;
+            }
+
+            .bluecard img {
+                height: 16vh;
+            }
+
+            .card-imagem-special {
+                margin-top: 29%;
+                margin-left: 0.2%;
+            }
+
+            .bluecard,
+            .purplecard .texto-titulo {
+                width: 100%;
+            }
+
+            .purplecard img {
+                height: 17vh;
+            }
+
+            .purplecard .card-imagem {
+                margin-top: 25%;
+            }
+
+            .rodape .bluecard,
+            .purplecard {
+                height: 67%;
+                width: 36%;
+                border-radius: 10px;
+                display: flex;
+            }
+
+        }
+    </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-dark fixed-top" id="nav">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"> <img src="../images/avatar_bombeiro.png" width="60px"></a>
-            <p class="navbar-title mt-3 fw-bold">HOME</p>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
-                aria-labelledby="offcanvasDarkNavbarLabel">
-                <div class="offcanvas-header">
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-                        aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">CATEGORIAS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">PERFIL</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">SAIR</a>
-                        </li>
-                </div>
-            </div>
-        </div>
-    </nav>
-    <div class="menu">
-        <div class="menu-display-1">
-            <div class="noar">
-                <img src="../images/logo_noar.png" width="65px">
-            </div>
-        </div>
-
-        <div class="menu-display-2">
-            <div class="bombeiro">
-                <img src="../images/avatar_bombeiro.png" width="65px">
-            </div>
-        </div>
-    </div>
-
-    <div class="texto">
-        <div class="texto-block" style="margin-top: 20px;">
-            <div class="ola">Olá,</div>
-            <div class="bombeiro">Bombeiro Robson</div>
-        </div>
-    </div>
-
-    <div class="central">
-        <div class="redcard">
-            <div class="card-texto">
-                <div class="texto-block">
-                    <div class="texto-titulo">Nova Ocorrência</div>
-                    <div class="texto-subtitulo">Registre os dados do paciente</div>
+    <div class="base_home">
+        <nav class="navbar navbar-dark fixed-top" id="nav">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"> <img src="../images/avatar_bombeiro.png" width="60px"></a>
+                <p class="navbar-title mt-3 fw-bold">HOME</p>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                    aria-labelledby="offcanvasDarkNavbarLabel">
+                    <div class="offcanvas-header">
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">CATEGORIAS</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">PERFIL</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">SAIR</a>
+                            </li>
+                    </div>
                 </div>
             </div>
-            <div class="card-imagem">
-                <div class="align-imagem">
-                    <img src="../images/mais.png">
+        </nav>
+        <div class="texto">
+            <div class="texto-block" style="">
+                <div class="ola">Olá,</div>
+                <div class="bombeiro">Bombeiro Robson</div>
+            </div>
+        </div>
+        <div class="central">
+            <div class="redcard">
+                <div class="card-texto">
+                    <div class="texto-block">
+                        <div class="texto-titulo">Nova Ocorrência</div>
+                        <div class="texto-subtitulo">Registre os dados do paciente</div>
+                    </div>
+                </div>
+                <div class="card-imagem">
+                    <div class="align-imagem">
+                        <img src="../images/mais.png">
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="rodape">
-        <div class="bluecard">
-            <div class="card-imagem-special">
-                <div class="align-imagem">
-                    <img src="../images/pastas.png">
+        <div class="rodape">
+            <div class="bluecard">
+                <div class="card-imagem-special">
+                    <div class="align-imagem">
+                        <img src="../images/pastas.png">
+                    </div>
+                </div>
+                <div class="card-texto">
+                    <div class="texto-titulo">Histórico de Ocorrências</div>
                 </div>
             </div>
-            <div class="card-texto">
-                <div class="texto-titulo">Histórico de Ocorrências</div>
-            </div>
-        </div>
-        <div class="purplecard">
-            <div class="card-texto">
-                <div class="texto-titulo">Espaço do Usuário</div>
-            </div>
-            <div class="card-imagem">
-                <div class="align-imagem">
-                    <img src="../images/perfil.png">
+            <div class="purplecard">
+                <div class="card-texto">
+                    <div class="texto-titulo">Espaço do Usuário</div>
+                </div>
+                <div class="card-imagem">
+                    <div class="align-imagem">
+                        <img src="../images/perfil.png">
+                    </div>
                 </div>
             </div>
         </div>
