--- a/pages/situation.html
+++ b/pages/situation.html
@@ -77,7 +77,7 @@
         flex-direction: column;
         justify-content: space-between;
         height: 75vh;
-        margin-top: 8%;
+        margin-top: 87px;
     }
 
     .situacao_texto1 {
