--- a/pages/home.html
+++ b/pages/home.html
@@ -94,6 +94,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            background-color:aquamarine ;
         }
 
         .central .redcard {
@@ -146,6 +147,7 @@
             height: 35%;
             margin-left: 20px;
             margin-right: 20px;
+            background-color: #AA7AE4;
         }
 
         .rodape .bluecard,
@@ -279,13 +281,13 @@
             </div>
         </nav>
         <div class="texto">
-            <div class="texto-block" style="">
+            <!-- <div class="texto-block" style="">
                 <div class="ola">Olá,</div>
                 <div class="bombeiro">Bombeiro Robson</div>
-            </div>
+            </div> -->
         </div>
         <div class="central">
-            <div class="redcard">
+            <!-- <div class="redcard">
                 <div class="card-texto">
                     <div class="texto-block">
                         <div class="texto-titulo">Nova Ocorrência</div>
@@ -297,10 +299,10 @@
                         <img src="../images/mais.png">
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class="rodape">
-            <div class="bluecard">
+            <!-- <div class="bluecard">
                 <div class="card-imagem-special">
                     <div class="align-imagem">
                         <img src="../images/pastas.png">
@@ -319,7 +321,7 @@
                         <img src="../images/perfil.png">
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <script>
