--- a/pages/gestacional2.html
+++ b/pages/gestacional2.html
@@ -116,11 +116,12 @@
 
 
                         <div class="container d-flex p-0">
-                            <label class="card-text mb-0 col-4 p-0">FEZ PRÉ-NATAL?</label>
-                            <div class="container d-flex gap-4 p-0 ms-4">
+                            
+                            <div class="container d-flex gap-4 p-0">
 
-                        <div class="container d-flex">
-                            <label class="card-text mb-0" style="white-space: nowrap;">FEZ PRÉ-NATAL?</label>
+                        <div class="container d-flex p-0">
+                            <!-- <label class="card-text mb-0" style="white-space: nowrap;">FEZ PRÉ-NATAL?</label> -->
+                            <label class="card-text mb-0 col-4 p-0">FEZ PRÉ-NATAL?</label>
                             <div class="container d-flex gap-4 p-0 ml-3">
 
                                 <div class="form-check">
